Added support to fetch "Real" prediction via API (only admin)
